--- a/webpage-mockup/inspection-style.css
+++ b/webpage-mockup/inspection-style.css
@@ -17,7 +17,7 @@
     max-width: fit-content;
     margin: 0 auto;
     white-space: nowrap;
-
+    overflow-x: auto;
 }
 #inspection-table thead th { 
     position: sticky; top: 0;
