--- a/React/src/App.css
+++ b/React/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+}
+:root{
+  --navColor: #ffffff;
+  --pageBackgroundColor: #ffffff;
+  --mainColor: #000000;
+
+}
+body {
+  font-family: 'Roboto Slab', serif;
+}
+h1 {
+  font-family: 'Roboto', sans-serif;
+  color: var(--mainColor);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+hr {
+  margin: 10px 0;
+  height: 5px;
+  background-color: var(--mainColor);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.button-group-column {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 30px;
+  height: 70vh;
 }
 
-.App-link {
-  color: #61dafb;
+.button-group-row {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  margin: 5px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+  cursor: pointer;
 }
+
+.button:active {
+  box-shadow: 0 0 #ffffff;
+  transform: translateY(4px);
+}
+
+.full { width: 100%; }
+.red {background-color: rgba(223, 44, 20,1); color: white;}
+.orange {background-color: rgba(245, 130, 22,1); color: black;}
+.yellow {background-color: rgba(255, 255, 0,1); color: black;}
+.green {background-color: rgba(0, 163, 0,1); color: white;}
+.blue {background-color: rgba(0, 0, 255,1); color: white;}
+.purple {background-color: rgba(81, 8, 126,1); color: white;}
+.white {background-color: white; color: black;}
+.black {background-color: rgba(0,0,0,1); color: white;}
+.grey {background-color: rgba(128, 128, 128,1); color: white; border: 0;}
+.border {border: 1px solid black;}
+.half {opacity: 0.5;}
+.disabled { background-color: gray; cursor: default; }
+.disabled:active { box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17); transform: translateY(0); }
