--- a/React/src/App.css
+++ b/React/src/App.css
@@ -4,16 +4,34 @@
 }
 :root{
   --navColor: #ffffff;
-  --pageBackgroundColor: #ffffff;
+  --page: #ffffff;
   --mainColor: #000000;
+  --secondaryColor: #000000;
 
+}
+.App, html {
+  background-color: #e5e5e5;
 }
 body {
   font-family: 'Roboto Slab', serif;
 }
-h1 {
+
+/******* Google Icons *****************/
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-70 { font-size: 70px; }
+header {
+  padding: 20px 0 0 20px;
+  display: flex;
+  justify-content: flex-start;
+}
+header h1 {
   font-family: 'Roboto', sans-serif;
   color: var(--mainColor);
+  font-size: 70px;
+  font-weight: 900;
 }
 
 hr {
@@ -55,6 +73,10 @@ hr {
 }
 
 .full { width: 100%; }
+.large {
+  font-size: 40px;
+  padding: 50px;
+}
 .red {background-color: rgba(223, 44, 20,1); color: white;}
 .orange {background-color: rgba(245, 130, 22,1); color: black;}
 .yellow {background-color: rgba(255, 255, 0,1); color: black;}
@@ -68,3 +90,12 @@ hr {
 .half {opacity: 0.5;}
 .disabled { background-color: gray; cursor: default; }
 .disabled:active { box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17); transform: translateY(0); }
+
+.loading {
+  margin: 0 auto;
+  display: block;
+}
+
+nav {
+  font-size: 20px;
+}
