--- a/React/src/pages/Page.css
+++ b/React/src/pages/Page.css
@@ -2,8 +2,7 @@ main {
     max-width: 900px;
     margin: 5px auto;
     padding: 10px;
-    background-color: var(--pagBackgroundColor);
-    border: 1px solid black;
+    background-color: var(--page);
     position: relative;
 }
 
@@ -40,41 +39,24 @@ main p {
     justify-content: space-between;
 }
 
-table {
-    border-collapse: collapse;
-    display: block;
-    max-width: -moz-fit-content;
-    max-width: fit-content;
-    margin: 10px auto;
-    white-space: nowrap;
-    overflow-x: auto;
+table th {
+    font-size: 15px;
 }
-table thead th { 
-    position: sticky; top: 0;
-    padding: 10px;
-    background-color: var(--mainColor);
-    color: white;
-}
-table tbody {
-    overflow: auto;
-    width: 100%;
-    margin: 0 auto;
-}
+
 .box-num {
     text-align: center;
-    border: 1px solid #ddd;
-    padding: 8px 0;
-    background-color: gray;
-    color: white;
 }
-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
+
+.alert {
+    margin: 10px 0;
 }
-#inspection-table td:first-child {
-    font-weight: bold;
-    width: 35px;
-    text-align: center;
+
+.searchBox {
+    margin: 0 5px;
+    padding: 2px;
+    font-family: Roboto Slab, serif;
 }
-#inspection-table tr:nth-child(even){background-color: #f2f2f2;}
-#inspection-table tr:hover {background-color: #ddd;}
+
+nav, .navbar-brand {
+    font-size: 30px;
+}
