--- a/React/src/pages/Page.css
+++ b/React/src/pages/Page.css
@@ -60,3 +60,14 @@ table th {
 nav, .navbar-brand {
     font-size: 30px;
 }
+
+input[type=number] {
+    width: 50px;
+    margin: 0 5px;
+    padding: 2px;
+}
+
+.right {
+    position: absolute;
+    right: 5px;
+}
