--- a/React/src/App.css
+++ b/React/src/App.css
@@ -88,7 +88,7 @@ hr {
 .grey {background-color: rgba(128, 128, 128,1); color: white; border: 0;}
 .border {border: 1px solid black;}
 .half {opacity: 0.5;}
-.disabled { background-color: gray; cursor: default; }
+.disabled { background-color: gray; cursor: not-allowed !important; }
 .disabled:active { box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17); transform: translateY(0); }
 
 .loading {
