adding more loading screens

--- a/React/src/App.css
+++ b/React/src/App.css
@@ -9,6 +9,18 @@
   --secondaryColor: #000000;
 
 }
+#loading-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
+  z-index:5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .App, html {
   background-color: #e5e5e5;
 }
