--- a/React/src/App.css
+++ b/React/src/App.css
@@ -103,11 +103,12 @@ hr {
 .disabled { background-color: gray; cursor: not-allowed !important; }
 .disabled:active { box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17); transform: translateY(0); }
 
-.loading {
-  margin: 0 auto;
-  display: block;
+input:checked + label {
+    background-color: rgba(0, 163, 0,1);
+    color: white;
+    opacity: 1;
 }
 
-nav {
-  font-size: 20px;
+input[type=checkbox] {
+  opacity: 0;
 }
